--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                 lat:21.139087,
                 long:72.7494012
             },
+            {
+                name:"Pathradia",
+                lat:21.0576894,
+                long:73.1028342
+            }
         ];
 
         cities.forEach(city => {
