--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 long:72.7494012
             },
             {
-                name:"Tarsadi",
-                lat:21.0619187,
-                long:73.1156502
+                name:"Pathradia",
+                lat:21.0576894,
+                long:73.1028342
             }
         ];
 
